added contacts
